# Audio-background-noise-cancellation

./: .gitignore  pyproject.toml
Flowchart_system_diagram/: DAA.drawio  DAA.drawio.html  design.md  design.xml
Overall/: kalman.py  nlm.py  spectral_gating.py
data/noiseSamples/: download.py  noise_classification_results.csv
data/noiseSamples/clean/: convert.py
data/noiseSamples/noised/: add_noise.py  convert_to_pcm.py
src/: kalmer.py  main.py
src/Beamforming/: SpeechEnhancementUsingBeamforming.ipynb  mvdr_tutorial.ipynb
src/Kalman/: kalman.py
src/NLM/: nlm.py
src/RNNnoise/: run.py
src/Spectral Gating/: spectral_gating.py
src/SpectralGrating/: spectral_gating.py
src/Wavelets/: denoise.py  something.py  test.py
src/Wavelets/lib/: noiseProfiler.py
src/Weiner/: Test.py  Weiner.py
src/api/: app.py  classify_noise_endpoint.py  main.py
src/api/graphing/: graphs.py
src/api/lib/: __init__.py
src/api/methods/Kalman/: kalman.py
src/api/methods/NLM/: nlm.py
src/api/methods/Spectral_Gating/: spectral_gating.py
src/api/methods/Wavelets/: __init__.py  (+2 more)
src/api/noise_classification/: scratch.ipynb  utils.py
src/detect noise type/: detect.py
src/detect_noise_type/: detect.py  utils.py
src/frontend/: app.py
src/graphing/: graphs.py
src/methods/Spectral Gating/: spectral_gating.py
src/methods/SpectralGating/: noisy_audio.mpeg  something.py  spectral_gating.py
src/methods/Wavelets/: den.py  denoise.py
src/noiseGeneration/noiseSamples/: download.py  noise_classification_results.csv  testing.py
src/noise_classification/: detect.py
(+6 files in other folders)
