[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audioread>=3.0.1",
    "jupyterlab>=4.3.0",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "noisereduce>=3.0.3",
    "numpy>=2.0.2",
    "pydub>=0.25.1",
    "pywavelets>=1.7.0",
    "scipy>=1.14.1",
    "soundfile>=0.12.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "tqdm>=4.66.5",
]
