[project]
name = "audio-background-noise-cancellation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audioread>=3.0.1",
    "datasets>=3.1.0",
    "flask>=3.1.0",
    "jinja2>=3.1.4",
    "jupyterlab>=4.3.1",
    "librosa>=0.10.2.post1",
    "mir-eval>=0.7",
    "noisereduce>=3.0.3",
    "openpyxl>=3.1.5",
    "pesq>=0.0.4",
    "psutil>=6.1.0",
    "pydub>=0.25.1",
    "pystoi>=0.4.1",
    "pywavelets>=1.7.0",
    "soundfile>=0.12.1",
    "streamlit>=1.40.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "tqdm>=4.67.0",
    "transformers>=4.46.3",
]
